--- a/style.css
+++ b/style.css
@@ -15,10 +15,45 @@ html,body {
   height: 100px;
   width: 100%;
   align-items: center;
+  justify-content: space-between;
+
 }
 
 
 .trybewarts-header-logo {
   height: 70px;
-  justify-self: flex-start;
 }
+
+.trybewarts-login {
+  background-color: cadetblue;
+  height: 70px;
+  width: 490px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+
+header form input {
+  height: 35px;
+  width: 150px;
+  padding: 5px 10px;
+  box-sizing: border-box;
+  border: 1px solid gray;
+  border-radius: 8px;
+}
+
+header form input:focus {
+  outline: none;
+}
+
+header form button {
+  height: 35px;
+  width: 70px;
+  border-radius: 8px;
+  border: 1px solid gray;
+}
+
+
+
